<resources>

    <string name="google_analytics_id" translatable="false">UA-XXXXXXXX-Y</string>
    <string name="see_tutorial">See tutorial</string>
    <string name="users_list">Users list</string>
    <string name="app_name">Clean Architecture Sample</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="accept">Accept</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="you">You</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_error">This email is already in use</string>
    <string name="loading">Loading…</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_out_question">Do you want to log out?</string>
    <string name="username">Username</string>
    <string name="users">Users</string>
    <string name="no_users_title">No users</string>
    <string name="gps_question">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="skip_tutorial">skip tutorial!</string>
    <string name="map">Map</string>
    <string name="tutorial_1">This is the first sample text, do you like it?</string>
    <string name="tutorial_2">And now it comes the second one! Wow, awesome!</string>
    <string name="tutorial_3">I never liked the third text, just ignore it…</string>
    <string name="tutorial_4">And finally, the last one, hope you enjoyed it!</string>
    <string name="tutorial">Tutorial</string>
    <string name="user_detail">User detail</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="description">Description</string>
    <string name="enhancement">Enhancement</string>
    <string name="select_type">Select type</string>
    <string name="help">Help</string>
    <string name="error">Error</string>
    <string name="report">Report</string>
    <string name="report_sent">Report sent</string>
    <string name="no_users_subtitle">Add a new user tapping on + button</string>
    <string name="permission_location_never_ask">Location permission is denied</string>
    <string name="permission_location_rationale">Location permission is needed to display your position on the map. Do you want to allow it?</string>
</resources>
